--- a/_config.yml
+++ b/_config.yml
@@ -94,10 +94,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "namnamDev"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "문과생의 개발블로그"
+  location         : "구미"
   email            :
   links:
     - label: "Email"
